<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gabriel.inventory_project.MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/progect_name"
                android:layout_gravity="center"
                android:textColor="@color/icons"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:textColor="@color/icons"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:layout_marginTop="70dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_dark" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textColor="@color/icons"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:layout_marginTop="4dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_dark" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/icons"
                android:text="@string/remember_me"
                android:padding="8dp"/>
            <Button
                android:id="@+id/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:text="@string/log_in"
                android:textColor="@color/icons"
                android:clickable="true"
                android:textAllCaps="false"
                android:padding="16dp"
                android:layout_marginTop="24dp"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:text="@string/registration"
                android:textColor="@color/icons"
                android:textAllCaps="false"
                android:clickable="true"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:padding="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fo_get_pas"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/icons"
                android:padding="16dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
