<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gabriel.inventory_project.Inventory_pg.thing.NewThing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_name_thing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/name_thing"
        android:maxLines="1"
        android:layout_marginTop="70dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <EditText
        android:id="@+id/et_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/type"
        android:maxLines="1"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/price"
        android:maxLines="1"
        android:layout_marginTop="4dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <TextView
        android:id="@+id/tx_warranty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/years_of_warranty"
        android:textSize="20sp"/>
    <LinearLayout
        android:id="@+id/liner_layout_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:padding="8dp">
        <ImageButton
            android:id="@+id/minus"
            android:background="@color/primary"
            android:src="@mipmap/ic_keyboard_arrow_left_black_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/view_counter"
            android:paddingTop="8dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/plus"
            android:background="@color/primary"
            android:src="@mipmap/ic_keyboard_arrow_right_black_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <Button
        android:id="@+id/bt_set_image"
        android:text="@string/set_image"
        android:textColor="@color/icons"
        android:background="@color/accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_set_image"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <Button
        android:id="@+id/add_thing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/accent"
        android:text="@string/add_object"
        android:textColor="@color/icons"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"/>
</LinearLayout>